@@ -1,3 +1,7 @@
+2007-05-16  Markus Deuling  <deuling@de.ibm.com>
+
+	* server.c (handle_query): Add reply for qC packet. 
+
 2007-05-10  Pedro Alves  <pedro_alves@portugalmail.pt>
 	    Leo Zayas  <lerele@champenstudios@com>
 
